overflow: fixed

--- a/src/Components/Hero/reasonsWhy.css
+++ b/src/Components/Hero/reasonsWhy.css
@@ -1,36 +1,38 @@
 .reasonsSection {
     height: 1500px;
     background-color: hsl(0, 0%, 98%);
+    overflow: hidden;
 }
 
 .content {
     border: solid 3px black;
-    height: 50%;
+    width: 100%;
+    height: 40%;
     padding: 0;
     margin: 0;
     background: url('../images/bg-intro-desktop.svg');
-    background-position-x: 580px;
-    background-position-y: -290px;
+    background-position-x: 500px;
+    background-position-y: -260px;
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
     display: flex;
     flex-direction: row;
-    overflow: hidden;
     
 }
 
 .imagemock {
-    z-index: 2;
+    height: 100%;
+    z-index: 1;
     border: solid 2px red;
-    width: 52%;
+    width: 55%;
     
 }
 
 .imagemock img {
     
     float: right;
-    transform: translate(150px, -70px);
+    transform: translate(130px, -70px);
 }
 
 .next-generation {
@@ -38,7 +40,7 @@
     /* margin-left: 90px; */
     border: solid 2px green;
     margin-top: 0;
-    width: 48%;
+    width: 45%;
     display: flex;
     flex-direction: column;
     align-content: flex-start;
